--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/svgcolor"
     tools:context=".LoginActivity">
 
     <com.google.android.material.textfield.TextInputLayout
@@ -47,7 +48,8 @@
             android:layout_height="wrap_content"
             android:hint="Type your password"
             android:inputType="text|textPassword"
-            android:text="tales88532392" />
+            android:text="tales88532392"
+            android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <TextView
@@ -57,6 +59,8 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="2dp"
         android:text="Não têm conta?"
+        android:textSize="16sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toStartOf="@+id/textCadastro"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintHorizontal_chainStyle="packed"
@@ -70,6 +74,8 @@
         android:layout_marginTop="16dp"
         android:text="Cadastre-se"
         android:textColor="@color/highlightColor"
+        android:textSize="16sp"
+        android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/textView"
