--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -10,4 +10,9 @@
     <style name="ActionOverFlow" parent="Widget.AppCompat.ActionButton.Overflow">
         <item name="tint">@color/white</item>
     </style>
+    <!-- Border imagem   -->
+    <style name="borderStyle">
+        <item name="cornerSize">50%</item>
+    </style>
+
 </resources>
