Chat working and project completed

--- a/app/src/main/res/layout/item_chat_send.xml
+++ b/app/src/main/res/layout/item_chat_send.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp">
 
 
     <TextView
@@ -12,7 +13,7 @@
         android:background="@drawable/baground_chat_send"
         android:padding="8dp"
         android:text="ola tales como esta"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
