--- a/app/src/main/res/drawable/baground_chat_send.xml
+++ b/app/src/main/res/drawable/baground_chat_send.xml
@@ -1,13 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <gradient
-        android:type="linear"
-        android:angle="180"
-        android:startColor="#0001FAF2"
-        android:centerColor="#2091FFFB"
-        android:endColor="#76CA7A"
-        android:gradientRadius="100%"
-        />
+    <solid android:color="#C1FF95"/>
     <corners android:radius="10dp"/>
 </shape>
