--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,7 @@
             android:layout_height="wrap_content"
             android:hint="Type your e-mail"
             android:inputType="text|textEmailAddress|textAutoComplete"
-            android:text="teste@gmail.com" />
+            android:text="batman@gmail.com" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -48,7 +48,7 @@
             android:layout_height="wrap_content"
             android:hint="Type your password"
             android:inputType="text|textPassword"
-            android:text="tales88532392"
+            android:text="tales12345"
             android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
