--- a/app/src/main/res/layout/item_chat_destinaid.xml
+++ b/app/src/main/res/layout/item_chat_destinaid.xml
@@ -3,7 +3,9 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    android:layout_marginTop="5dp"
+    >
 
     <TextView
         android:id="@+id/textViewDestination"
@@ -12,7 +14,7 @@
         android:background="@drawable/background_chat_destination"
         android:padding="8dp"
         android:text="ola tales como esta"
-        android:textColor="#FFFFFF"
+        android:textColor="#000000"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
